# coin-flip-telegram-bot

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  database.py  docker-compose-local.yml  docker-compose.yml  dockerfile  handlers.py  main.py  models.py  pyproject.toml  requirements.txt
bot/: __main__.py  config.py  db.py  handlers.py  models.py
src/: config.py  database.py  handlers.py  main.py  models.py
